--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -9,6 +9,14 @@ html, body {
     align-items: center;
 }
 
+/* 禁用选取 */
+body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard syntax */
+}
+
 /* 背景图片样式 */
 img {
     position: absolute;
