--- a/resources/css/op-flip.css
+++ b/resources/css/op-flip.css
@@ -64,7 +64,7 @@
 .team-member img {
     width: 100%;
     height: auto;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     margin-bottom: 1rem;
 }
 
