--- a/resources/css/public/footer.css
+++ b/resources/css/public/footer.css
@@ -14,9 +14,10 @@ footer {
     background: #333;
     color: #fff;
     text-align: center;
-    padding: 1rem 0;
+    padding: 0.4rem 0;
     width: 100%;
     bottom: 0;
+    font-size: 14px;
 }
 
 .fixed {
