style(menu): 添加初始化样式
- 在 menu.css 文件中添加了通用的初始化样式
- 设置了 * 选择器的 margin、padding 和 box-sizing 属性

--- a/resources/css/public/menu.css
+++ b/resources/css/public/menu.css
@@ -1,3 +1,9 @@
+/* 初始化样式 */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /* 头部样式 */
 header {
     background: rgba(255, 255, 255, 0.5);
