--- a/resources/css/public/menu.css
+++ b/resources/css/public/menu.css
@@ -33,7 +33,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     font-weight: bold;
     line-height: 50px;
@@ -77,7 +77,8 @@ header nav ul li a:hover {
     border: none;
     cursor: pointer;
     z-index: 1001;
-    margin-right: 10px; /* 添加右边距 */
+    margin-left: 20px; /* 增加右边距 */
+    margin-top: 10px; /* 增加上边距 */
 }
 
 .hamburger span {
@@ -100,11 +101,11 @@ header nav ul li a:hover {
         position: absolute;
         top: 50px;
         left: 0;
-        background-color: rgba(255, 255, 255, 0.9); /* 调整背景颜色 */
+        background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 80% 0; /* 添加适当的上下内边距 */
-        overflow: hidden; /* 移除滚动条 */
-        max-height: 0; /* 初始状态下隐藏 */
+        padding: 60% 0; /* 调整 padding 值 */
+        overflow: hidden;
+        max-height: 0;
         transition: max-height 0.3s ease;
     }
 
@@ -120,8 +121,8 @@ header nav ul li a:hover {
 
     header nav ul li a {
         color: #000;
-        font-size: 16px; /* 调整字体大小 */
-        line-height: 1.5; /* 调整行高 */
+        font-size: 16px;
+        line-height: 1.5;
         padding: 10px 20px;
         display: block;
         text-align: center;
@@ -130,7 +131,7 @@ header nav ul li a:hover {
 
     header nav ul.active {
         display: block;
-        max-height: 100vh; /* 使用视口高度确保足够大 */
+        max-height: 100vh;
     }
 }
 
