feat: 更新服务器主题并添加更新公告页面
- 移除关于页面中不再适用的内容
- 添加更新公告页面和对应的导航项
- 新增 .notUseAnymore 类样式，用于标记不再使用的内容

--- a/resources/css/private/about-us/about-us.css
+++ b/resources/css/private/about-us/about-us.css
@@ -82,3 +82,10 @@ body {
     font-size: 0.2em;
     text-decoration: line-through;
 }
+
+.notUseAnymore {
+    font-size: 1em;
+    color: #000;
+    background-color: #000; /* 高亮背景色 */
+    padding: 2px; /* 可选，增加内边距 */
+}
