--- a/resources/css/private/index/index.css
+++ b/resources/css/private/index/index.css
@@ -14,6 +14,9 @@ img {
 }
 
 body {
+    overflow: hidden;
+    max-width: 100%;
+    max-height: 100%;
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
@@ -77,7 +80,7 @@ body {
 /* 标题样式 */
 .title {
     font-size: 2rem;
-    margin: 5rem;
+    margin: 1rem;
     position: relative;
     z-index: 1;
 }
